# toogoodtogo-ha-mqtt-bridge

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pkgx.yml  pyproject.toml  renovate.json  requirements.in  requirements.txt  setup.py  taskfile.yaml
.github/: dependabot.yml  stale.yaml
.github/workflows/: ci.yaml  docker-build-and-push-as-rel.yaml  docker-build.yaml  docker-buld-push-as-testing.yaml  main.yml  pr.yaml  pytest.yaml  python-compat.yaml  testing.yaml
toogoodtogo_ha_mqtt_bridge/: config.py  main.py  mytgtgclient.py  settings.example.json  settings.json  watchdog.py
toogoodtogo_ha_mqtt_bridge/tests/: test_cron.py  test_full_cleanup.py  test_publish.py
