[project]
name = "toogoodtogo-ha-mqtt-bridge"
version = "0.0.1"
description = "This is a template repository for Python projects that use uv for their dependency management."
authors = [{ name = "Max Winterstein", email = "github@winterstein.mx" }]
readme = "README.md"
keywords = ['python']
requires-python = "==3.12.*"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "arrow==1.2.3",
    "certifi==2022.12.7",
    "charset-normalizer==2.0.12",
    "coloredlogs==15.0.1",
    "croniter==1.3.8",
    "dynaconf==3.1.12",
    "freezegun==1.2.2",
    "google-play-scraper==1.2.3",
    "humanfriendly==10.0",
    "idna==3.3",
    "packaging==23.0",
    "paho-mqtt==1.6.1",
    "python-dateutil==2.8.2",
    "random-user-agent==1.0.1",
    "requests==2.28.0",
    "schedule==1.1.0",
    "six==1.16.0",
    "tenacity==8.2.2",
    "tgtg==0.13.2",
    "urllib3==1.26.9",
    "setuptools",
    "click"
]

[project.urls]
Homepage = "https://MaxWinterstein.github.io/toogoodtogo-ha-mqtt-bridge/"
Repository = "https://github.com/MaxWinterstein/toogoodtogo-ha-mqtt-bridge"
Documentation = "https://MaxWinterstein.github.io/toogoodtogo-ha-mqtt-bridge/"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "deptry>=0.20.0",
    "mypy>=0.991",

    "ruff>=0.6.9",

]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["toogoodtogo_ha_mqtt_bridge"]

[tool.mypy]
files = ["toogoodtogo_ha_mqtt_bridge"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # i like my unnecessary True if ... else False
    "SIM210",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest"]
