[project]
name = "toogoodtogo-ha-mqtt-bridge"
dynamic = ["version"]
description = "Small python tool to forward stock of you favourite stores to Home Assistant via MQTT."
authors = [{ name = "Max Winterstein", email = "github@winterstein.mx" }]
readme = "README.md"
keywords = ['python']
requires-python = "==3.12.*"
dependencies = [
  "paho-mqtt==2.1.0",
  "dynaconf",
  "tgtg==0.18.3",
  "coloredlogs",
  "arrow",
  "croniter",
  "google-play-scraper",
  "random_user_agent",
  "packaging",
  "freezegun",
  "schedule",
  "click==8.1.8",
]

[project.urls]
Homepage = "https://MaxWinterstein.github.io/toogoodtogo-ha-mqtt-bridge/"
Repository = "https://github.com/MaxWinterstein/toogoodtogo-ha-mqtt-bridge"
Documentation = "https://MaxWinterstein.github.io/toogoodtogo-ha-mqtt-bridge/"

[tool.uv]
dev-dependencies = [
  "pytest>=7.2.0",
  "pre-commit>=2.20.0",
  "deptry>=0.20.0",
  "mypy>=0.991",
  "types-croniter",
  "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["toogoodtogo_ha_mqtt_bridge"]

[tool.mypy]
files = ["toogoodtogo_ha_mqtt_bridge"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
  # i like my unnecessary True if ... else False
  "SIM210",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.deptry.per_rule_ignores]
DEP004 = ["pytest"]

[tool.setuptools_scm]
